Fix input method and add color buttons Need to add the actual colors and pretty up the page

--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
     justify-content: center;
 }
 
+.buttonContainer {
+    display: flex;
+    flex-direction: column;
+}
+
 .numButton {
     font-size: x-large;
     margin: 8px;
