--- a/style.css
+++ b/style.css
@@ -2,10 +2,19 @@ body {
     background-color: slategrey;
 }
 
-#head {
+.title {
+    font-family: 'Times New Roman', Times, serif;
+    border-style: ridge;
+    border-width: 16px;
+    background-color: antiquewhite;
+    padding: 8px;
+}
+
+.head {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .buttonContainer {
@@ -13,6 +22,7 @@ body {
     flex-direction: column;
 
 }
+
 
 .colorButtons {
     display: flex;
@@ -51,11 +61,10 @@ body {
 
 .container {
     display: grid;
-    border: 5px;
+    border: 16px;
     border-style: ridge;
     width: 500px;
     height: 500px;
-    /*grid-gap: 1em;*/
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
     max-width: 500px;
