--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     background-color: black;
     color: white;
     padding: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .head {
